--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ install:
 
 script: 
   - gulp build
-  - gulp build::glyphicons
+  - gulp build:glyphicons
 
 # Unlock private key
 before_deploy:
