--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -11,6 +11,7 @@ source "http://rubygems.org"
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
 gem "minima", "~> 2.0"
 
+gem 'unf_ext', '< 0.0.9'
 gem "github-pages", group: :jekyll_plugins
 
 # If you have any plugins, put them here!
